--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   backend:
-    image: evrirus/nftex_backend:latest   # образ из Docker Hub
+    image: evrirus/nftex_backend:latest
     container_name: backend
     environment:
       - POSTGRES_DB=dbname
@@ -10,18 +10,20 @@ services:
       - POSTGRES_PASSWORD=dbpassword
       - POSTGRES_HOST=db
       - POSTGRES_PORT=5432
-    depends_on:
-      - db
     expose:
       - "8000"
+    depends_on:
+      - db
 
   frontend:
-    image: evrirus/nftex_frontend:latest  # образ из Docker Hub
+    image: evrirus/nftex_frontend:latest
     container_name: frontend
     ports:
       - "80:80"
     depends_on:
       - backend
+    expose:
+      - "80"
 
   db:
     image: postgres:17
@@ -33,8 +35,8 @@ services:
       POSTGRES_DB: dbname
     volumes:
       - db_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
+    expose:
+      - "5432"
 
 volumes:
   db_data:
