--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,36 @@
 version: "3.9"
 
+networks:
+  webproxy:
+    external: true   # создай заранее: docker network create webproxy
+
 services:
+  nginx-proxy:
+    image: jwilder/nginx-proxy
+    container_name: nginx-proxy
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - /etc/nginx/certs
+      - /etc/nginx/vhost.d
+      - /usr/share/nginx/html
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+    networks:
+      - webproxy
+
+  letsencrypt:
+    image: jrcs/letsencrypt-nginx-proxy-companion
+    environment:
+      NGINX_PROXY_CONTAINER: nginx-proxy
+    volumes:
+      - /etc/nginx/certs
+      - /etc/nginx/vhost.d
+      - /usr/share/nginx/html
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    networks:
+      - webproxy
+
   backend:
     image: evrirus/nftex_backend:latest
     container_name: backend
@@ -10,6 +40,11 @@ services:
       - POSTGRES_PASSWORD=dbpassword
       - POSTGRES_HOST=db
       - POSTGRES_PORT=5432
+      - VIRTUAL_HOST=richmachine.ru
+      - LETSENCRYPT_HOST=richmachine.ru
+      - LETSENCRYPT_EMAIL=orion4605@gmail.com
+    networks:
+      - webproxy
     expose:
       - "8000"
     depends_on:
@@ -18,12 +53,16 @@ services:
   frontend:
     image: evrirus/nftex_frontend:latest
     container_name: frontend
-    ports:
-      - "80:80"
-    depends_on:
-      - backend
+    environment:
+      - VIRTUAL_HOST=richmachine.ru
+      - LETSENCRYPT_HOST=richmachine.ru
+      - LETSENCRYPT_EMAIL=orion4605@gmail.com
+    networks:
+      - webproxy
     expose:
       - "80"
+    depends_on:
+      - backend
 
   db:
     image: postgres:17
